--- a/zip_archive/config_file.ini
+++ b/zip_archive/config_file.ini
@@ -1,7 +1,8 @@
-#Important: for folders, insert the WIN path with / instead of \
 [DEFAULT]
-destination_folder = T:/UFFICIO SOFTWARE/Leonardo/BACKUP SVILUPPO
+#use \ here
+destination_folder = T:\UFFICIO SOFTWARE\Leonardo\BACKUP SVILUPPO
+#Attention: If this is set to True, it will delete all zip files in the destination_folder
+auto_remove_previous = True
 
 [SOURCE]
-folder_1 = D:/Sviluppo
-folder_2 = D:/Altro
+folder_1 = D:\Sviluppo
